--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,11 @@ android {
     defaultConfig {
         minSdkVersion 7
         targetSdkVersion 7
+
+        ndk {
+            moduleName "com_googlecode_android_scripting_Exec"
+            ldLibs "log"
+        }
     }
 
     buildTypes {
